# magda-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLA.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TRUST.md  build.bat  crowdin.yml  index.html  sitemap.xml  winbuild.ps1  winbuild.sh
magda/agents/: CMakeLists.txt  automation_agent.cpp  automation_agent.hpp  automation_executor.cpp  automation_executor.hpp  automation_parser.cpp  automation_parser.hpp  command_agent.cpp  command_agent.hpp  compact_executor.cpp  compact_executor.hpp  compact_parser.cpp  compact_parser.hpp  daw_agent.cpp  daw_agent.hpp  dsl_grammar.hpp  dsl_interpreter.cpp  dsl_interpreter.hpp  llama_local_client.cpp  llama_local_client.hpp  llama_model_manager.cpp  llama_model_manager.hpp  llm_client_factory.hpp  llm_config_utils.hpp  llm_presets.cpp  llm_presets.hpp  model_downloader.cpp  model_downloader.hpp  music_agent.cpp  music_agent.hpp  music_helpers.hpp  openai_client.cpp  openai_client.hpp  router_agent.cpp  router_agent.hpp
magda/daw/: CMakeLists.txt  magda.cpp  magda.hpp  magda_daw_main.cpp  version.hpp.in
magda/daw/audio/: ArpeggiatorPlugin.cpp  ArpeggiatorPlugin.hpp  AudioBridge.cpp  AudioBridge.hpp  AudioSidechainMonitorPlugin.cpp  AudioSidechainMonitorPlugin.hpp  AudioThumbnailManager.cpp  AudioThumbnailManager.hpp  AutomationCurveSimplifier.cpp  AutomationCurveSimplifier.hpp  AutomationPlaybackEngine.cpp  AutomationPlaybackEngine.hpp  AutomationRecordingEngine.cpp  AutomationRecordingEngine.hpp  ClipSynchronizer.cpp  ClipSynchronizer.hpp  CurveSnapshot.hpp  DeviceMeteringManager.cpp  DeviceMeteringManager.hpp  DeviceProcessor.cpp  DeviceProcessor.hpp  DrumGridPlugin.cpp  DrumGridPlugin.hpp  InstrumentRackManager.cpp  InstrumentRackManager.hpp  MagdaSamplerPlugin.cpp  MidiBridge.cpp  MidiBridge.hpp  MidiBroadcastBus.hpp  MidiChordEnginePlugin.cpp  MidiChordEnginePlugin.hpp  MidiDevicePlugin.cpp  MidiDevicePlugin.hpp  MidiReceivePlugin.cpp  MidiReceivePlugin.hpp  ModifierHelpers.hpp  MonoNoteProcessor.hpp  PluginManager.cpp  PluginManager.hpp  QwertyMidiKeyboard.cpp  (+25 more)
magda/daw/core/: AutomationCommands.cpp  AutomationCommands.hpp  AutomationInfo.cpp  AutomationInfo.hpp  AutomationManager.cpp  AutomationManager.hpp  ChordAnnotationCommands.hpp  ClipCommands.cpp  ClipCommands.hpp  ClipInfo.hpp  ClipManager.cpp  ClipManager.hpp  ClipOperations.hpp  ClipPropertyCommands.cpp  ClipPropertyCommands.hpp  ClipTypes.hpp  CommandPattern.hpp  Config.cpp  Config.hpp  DeviceInfo.hpp  MacroInfo.hpp  MidiFileWriter.cpp  MidiFileWriter.hpp  MidiNoteCommands.cpp  MidiNoteCommands.hpp  ModInfo.hpp  ModulatorEngine.hpp  ParameterDetector.cpp  ParameterDetector.hpp  ParameterInfo.cpp  ParameterInfo.hpp  ParameterUtils.cpp  ParameterUtils.hpp  PluginAlias.hpp  RackInfo.hpp  SelectionManager.cpp  SelectionManager.hpp  StringTable.cpp  StringTable.hpp  TrackCommands.cpp  (+10 more)
magda/daw/engine/: AudioEngine.hpp  MagdaEngineBehaviour.hpp  MagdaUIBehaviour.cpp  MagdaUIBehaviour.hpp  PlaybackPositionTimer.cpp  PlaybackPositionTimer.hpp  PluginScanCoordinator.cpp  PluginScanCoordinator.hpp  PluginScanner.cpp  ScanWorker.cpp  ScanWorker.hpp  TracktionEngineWrapper.cpp  TracktionEngineWrapper.hpp  TracktionEngineWrapperClips.cpp  TracktionEngineWrapperDevices.cpp  TracktionEngineWrapperInit.cpp  TracktionEngineWrapperPlugins.cpp  TracktionEngineWrapperRecording.cpp  TracktionEngineWrapperTracks.cpp  TracktionEngineWrapperTransport.cpp  plugin_scanner_main.cpp
magda/daw/music/: ChordCache.hpp  ChordEngine.cpp  ChordEngine.hpp  ChordEnums.hpp  ChordSuggestionEngine.cpp  ChordSuggestionEngine.hpp  ChordTypes.hpp  KeyModeHistogram.hpp  LRUCache.hpp  ScaleDetector.hpp  Scales.hpp
magda/daw/project/: ProjectInfo.hpp  ProjectManager.cpp  ProjectManager.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp
magda/daw/project/serialization/: AutomationModSerializer.cpp  ClipSerializer.cpp  ProjectSerializer.cpp  ProjectSerializer.hpp  SerializationHelpers.hpp  TrackSerializer.cpp
magda/daw/ui/debug/: DebugDialog.cpp
magda/daw/ui/dialogs/: AISettingsDialog.cpp  AISettingsDialog.hpp  AboutDialog.cpp  AboutDialog.hpp  AudioSettingsDialog.cpp  AudioSettingsDialog.hpp  ChainTreeDialog.cpp  ChainTreeDialog.hpp  ExportAudioDialog.cpp  ExportAudioDialog.hpp  ExportMidiDialog.cpp  ExportMidiDialog.hpp  ParameterConfigDialog.cpp  ParameterConfigDialog.hpp  PluginSettingsDialog.cpp  PluginSettingsDialog.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp  SplashScreen.cpp  SplashScreen.hpp  TrackManagerDialog.cpp
magda/daw/ui/i18n/: TranslationManager.cpp  TranslationManager.hpp
magda/daw/ui/layout/: LayoutConfig.hpp
magda/daw/ui/panels/: BottomPanel.cpp  BottomPanel.hpp  FooterBar.cpp  FooterBar.hpp  LeftPanel.cpp  LeftPanel.hpp  PanelTabBar.cpp  PanelTabBar.hpp  RightPanel.cpp  RightPanel.hpp  TabbedPanel.cpp  TabbedPanel.hpp  TransportPanel.cpp  TransportPanel.hpp
magda/daw/ui/state/: TimelineController.cpp  TimelineController.hpp  TimelineEvents.hpp  TimelineState.hpp
magda/daw/ui/themes/: DarkTheme.hpp  DialogLookAndFeel.hpp  (+6 more)
magda/daw/utils/: ScopedListener.hpp
tests/: CMakeLists.txt  test_audio_export.cpp  test_audiobridge_track_limit_bug.cpp  test_auto_tempo.cpp  test_automation_agent.cpp  test_automation_curve_simplifier.cpp  test_automation_singleton.cpp  test_clip_commands.cpp  test_clip_resize_operations.cpp  test_clip_sync_integration_juce.cpp  test_compact_executor_context.cpp  test_drum_grid_plugin.cpp  test_dsl_add_arpeggio.cpp  test_dsl_add_chord.cpp  test_freeze_track.cpp  test_group_tracks_and_macros.cpp  test_master_track_serialization.cpp  test_midi_clip_resize_left.cpp  test_midi_clip_split.cpp  test_midi_recording_juce.cpp  test_mono_note_processor.cpp  test_multi_out_tracks.cpp  test_parameter_utils.cpp  test_pianoroll_note_position.cpp  test_project_serialization.cpp  test_scale_detection.cpp  test_sends_and_track_deletion.cpp  test_session_clip_playback.cpp  test_sidechain_triggers.cpp  test_step_clock.cpp  test_tracktion_engine_wrapper_refactoring_juce.cpp
(+337 files in other folders)
